Updates from Jupyter notebooks

--- a/Accessing-S3-via-SageMaker-notebooks.ipynb
+++ b/Accessing-S3-via-SageMaker-notebooks.ipynb
@@ -2,6 +2,65 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "392e12e5-8756-4172-bb3f-55b859d29416",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "title: \"Accessing and Managing Data in S3 with SageMaker Notebooks\"\n",
+    "teaching: 20\n",
+    "exercises: 10\n",
+    "---\n",
+    "\n",
+    ":::::::::::::::::::::::::::::::::::::: questions \n",
+    "\n",
+    "- How can I load data from S3 into a SageMaker notebook?\n",
+    "- How do I monitor storage usage and costs for my S3 bucket?\n",
+    "- What steps are involved in pushing new data back to S3 from a notebook?\n",
+    "\n",
+    "::::::::::::::::::::::::::::::::::::::::::::::::\n",
+    "\n",
+    "::::::::::::::::::::::::::::::::::::: objectives\n",
+    "\n",
+    "- Read data directly from an S3 bucket into memory in a SageMaker notebook.\n",
+    "- Check storage usage and estimate costs for data in an S3 bucket.\n",
+    "- Upload new files from the SageMaker environment back to the S3 bucket.\n",
+    "\n",
+    "::::::::::::::::::::::::::::::::::::::::::::::::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7fb82e8e-439b-4339-85f5-b548e8d8a88f",
+   "metadata": {},
+   "source": [
+    "#### Directory setup\n",
+    "Let's make sure we're starting in the root directory of this instance, so that we all have our AWS_helpers.py file located in the same path (/test_AWS/scripts/AWS_helpers.py)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "636ef6a9-d818-46dc-91c7-e0bb67694049",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/ec2-user/SageMaker\n",
+      "/home/ec2-user/SageMaker\n"
+     ]
+    }
+   ],
+   "source": [
+    "%cd /home/ec2-user/SageMaker/\n",
+    "!pwd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f04814a0-86ef-4268-a779-cd6dc62c5cf7",
    "metadata": {},
    "source": [
@@ -11,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "6fbbf0be-ae55-4020-88ce-35dd4455d6ca",
    "metadata": {
     "tags": []
@@ -21,6 +80,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "sagemaker.config INFO - Not applying SDK defaults from location: /etc/xdg/sagemaker/config.yaml\n",
+      "sagemaker.config INFO - Not applying SDK defaults from location: /home/ec2-user/.config/sagemaker/config.yaml\n",
       "(712, 12)\n",
       "(179, 12)\n"
      ]
@@ -156,7 +217,7 @@
        "4  female  31.0      1      1  C.A. 31921   26.2500   NaN        S  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,17 +235,16 @@
     "s3 = boto3.client('s3')\n",
     "\n",
     "# Define the S3 bucket and object key\n",
-    "bucket = 'titanic-dataset-test'  # replace with your S3 bucket name\n",
+    "bucket_name = 'titanic-dataset-test'  # replace with your S3 bucket name\n",
+    "\n",
+    "# Read the train data from S3\n",
     "key = 'data/titanic_train.csv'  # replace with your object key\n",
-    "\n",
-    "# Read the object from S3\n",
-    "response = s3.get_object(Bucket=bucket, Key=key)\n",
-    "\n",
-    "# Load the data into a pandas DataFrame\n",
+    "response = s3.get_object(Bucket=bucket_name, Key=key)\n",
     "train_data = pd.read_csv(response['Body'])\n",
     "\n",
+    "# Read the test data from S3\n",
     "key = 'data/titanic_test.csv'  # replace with your object key\n",
-    "response = s3.get_object(Bucket=bucket, Key=key)\n",
+    "response = s3.get_object(Bucket=bucket_name, Key=key)\n",
     "test_data = pd.read_csv(response['Body'])\n",
     "\n",
     "# check shape\n",
@@ -192,8 +252,7 @@
     "print(test_data.shape)\n",
     "\n",
     "# Inspect the first few rows of the DataFrame\n",
-    "train_data.head()\n",
-    "# train_data.shape"
+    "train_data.head()"
    ]
   },
   {
@@ -212,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "86c8e06f-50f1-4f12-9b3d-32f0bdc711da",
    "metadata": {
     "tags": []
@@ -233,7 +292,7 @@
     "\n",
     "# Initialize the S3 client and download the file\n",
     "s3 = boto3.client(\"s3\")\n",
-    "s3.download_file(bucket, file_key, local_file_path)\n",
+    "s3.download_file(bucket_name, file_key, local_file_path)\n",
     "print(\"File downloaded:\", local_file_path)"
    ]
   },
@@ -257,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "50c2044c-acb4-48f5-b755-570d1cc4ecbb",
    "metadata": {
     "tags": []
@@ -267,18 +326,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total size of bucket 'titanic-dataset-test': 27.14 MB\n"
+      "Total size of bucket 'titanic-dataset-test': 41.04 MB\n"
      ]
     }
    ],
    "source": [
-    "import boto3\n",
-    "\n",
-    "s3 = boto3.client('s3')\n",
-    "\n",
-    "# Specify your bucket name\n",
-    "bucket_name = 'titanic-dataset-test'\n",
-    "\n",
     "# Initialize the total size counter\n",
     "total_size_bytes = 0\n",
     "\n",
@@ -295,6 +347,39 @@
     "# Convert the total size to megabytes for readability\n",
     "total_size_mb = total_size_bytes / (1024 ** 2)\n",
     "print(f\"Total size of bucket '{bucket_name}': {total_size_mb:.2f} MB\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "588180ab-e807-4e0f-99c7-bf36570da467",
+   "metadata": {},
+   "source": [
+    "We have added this code to a helper called `get_s3_bucket_size(bucket_name)` for your convenience. You can call this function via the below code."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c2bbb057-b8cb-4d04-8cf9-7bc91c7caed6",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'size_mb': 41.043779373168945, 'size_gb': 0.0400818157941103}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import test_AWS.scripts.AWS_helpers as helpers # test_AWS.scripts.AWS_helpers reflects path leading up to AWS_helpers.py\n",
+    "\n",
+    "helpers.get_s3_bucket_size(bucket_name)"
    ]
   },
   {
@@ -325,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "999a7e66-04e3-4577-b7ab-4ca9472e3ae6",
    "metadata": {
     "tags": []
@@ -335,7 +420,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Estimated monthly storage cost: $0.0006\n"
+      "Estimated monthly storage cost: $0.0009\n"
      ]
     }
    ],
@@ -366,6 +451,38 @@
   },
   {
    "cell_type": "markdown",
+   "id": "03a872b2-5a61-4503-925a-24222f8b1ecc",
+   "metadata": {},
+   "source": [
+    "For your convenience, we have also added this code to a helper function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "d0ec56b9-8c55-4c71-b682-aa0fae54a961",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Estimated monthly storage cost for bucket 'titanic-dataset-test': $0.0009\n"
+     ]
+    }
+   ],
+   "source": [
+    "import test_AWS.scripts.AWS_helpers as helpers # test_AWS.scripts.AWS_helpers reflects path leading up to AWS_helpers.py\n",
+    "\n",
+    "cost = helpers.calculate_s3_storage_cost(bucket_name)\n",
+    "\n",
+    "print(f\"Estimated monthly storage cost for bucket '{bucket_name}': ${cost:.4f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0a0198b8-3e30-4432-840d-093953a11dcd",
    "metadata": {},
    "source": [
@@ -390,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "2974d63f-cf39-4ff6-8544-ac8aa6be5e24",
    "metadata": {},
    "outputs": [
@@ -403,19 +520,58 @@
     }
    ],
    "source": [
-    "import boto3\n",
-    "\n",
     "# Define the S3 bucket name and the file paths\n",
-    "bucket_name = \"titanic-dataset-test\"\n",
     "train_file_path = \"results.txt\"\n",
-    "\n",
-    "# Initialize the S3 client\n",
-    "s3 = boto3.client('s3')\n",
     "\n",
     "# Upload the training file\n",
     "s3.upload_file(train_file_path, bucket_name, \"results/results.txt\")\n",
     "\n",
     "print(\"Files uploaded successfully.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "284e08c9-8b7c-46a4-b3c1-28ad14c7d3b7",
+   "metadata": {},
+   "source": [
+    "# Developer use - produce md version of this notebook"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "aa582344-6048-4efc-9bee-6cc1d5b3d973",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/ec2-user/SageMaker\n",
+      "[NbConvertApp] Converting notebook test_AWS/Accessing-S3-via-SageMaker-notebooks.ipynb to markdown\n",
+      "[NbConvertApp] Writing 21133 bytes to test_AWS/Accessing-S3-via-SageMaker-notebooks.md\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pwd\n",
+    "!jupyter nbconvert --to markdown test_AWS/Accessing-S3-via-SageMaker-notebooks.ipynb\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3a79385-1671-4d54-8864-190d36fd1b03",
+   "metadata": {},
+   "source": [
+    ":::::::::::::::::::::::::::::::::::::: keypoints \n",
+    "\n",
+    "- Load data from S3 into memory for efficient storage and processing.\n",
+    "- Periodically check storage usage and costs to manage S3 budgets.\n",
+    "- Use SageMaker to upload analysis results and maintain an organized workflow.\n",
+    "\n",
+    "::::::::::::::::::::::::::::::::::::::::::::::::"
    ]
   }
  ],
