--- a/Interacting-with-code-repo.ipynb
+++ b/Interacting-with-code-repo.ipynb
@@ -38,10 +38,43 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 71,
-   "id": "170bc5ec-70b2-4266-824d-0835828fcdd1",
+   "cell_type": "markdown",
+   "id": "bc178178-66f5-4787-bf22-f10163be29c8",
    "metadata": {},
+   "source": [
+    "#### Directory setup\n",
+    "Let's make sure we're starting at the same directory. Cd to the root directory of this instance before going further."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "47497f6e-18ce-4463-84d4-feade72564dc",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/ec2-user/SageMaker\n",
+      "/home/ec2-user/SageMaker\n"
+     ]
+    }
+   ],
+   "source": [
+    "%cd /home/ec2-user/SageMaker/\n",
+    "!pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "170bc5ec-70b2-4266-824d-0835828fcdd1",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -84,9 +117,9 @@
     "import getpass\n",
     "\n",
     "# Prompt for GitHub username and PAT securely\n",
-    "# github_url = 'github.com/UW-Madison-DataScience/test_AWS.git' # found under Code -> Clone -> HTTPS (remote the https:// before the rest of the address)\n",
-    "# username = input(\"GitHub Username: \")\n",
-    "# token = getpass.getpass(\"GitHub Personal Access Token (PAT): \")"
+    "github_url = 'github.com/UW-Madison-DataScience/test_AWS.git' # found under Code -> Clone -> HTTPS (remote the https:// before the rest of the address)\n",
+    "username = input(\"GitHub Username: \")\n",
+    "token = getpass.getpass(\"GitHub Personal Access Token (PAT): \")"
    ]
   },
   {
@@ -123,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 5,
    "id": "633b7da6-05aa-4c0d-b9ad-1677100fb994",
    "metadata": {
     "tags": []
@@ -133,13 +166,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "/home/ec2-user/SageMaker\n",
       "/home/ec2-user/SageMaker/test_AWS\n"
      ]
     }
    ],
    "source": [
     "!pwd\n",
-    "# %cd test_AWS"
+    "%cd test_AWS"
    ]
   },
   {
@@ -277,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 6,
    "id": "2cb6345d-16b7-44af-b026-98abe4a060a7",
    "metadata": {
     "tags": []
@@ -287,9 +321,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: jupytext in /home/ec2-user/anaconda3/envs/python3/lib/python3.10/site-packages (1.16.4)\n",
+      "Collecting jupytext\n",
+      "  Downloading jupytext-1.16.4-py3-none-any.whl.metadata (13 kB)\n",
       "Requirement already satisfied: markdown-it-py>=1.0 in /home/ec2-user/anaconda3/envs/python3/lib/python3.10/site-packages (from jupytext) (3.0.0)\n",
-      "Requirement already satisfied: mdit-py-plugins in /home/ec2-user/anaconda3/envs/python3/lib/python3.10/site-packages (from jupytext) (0.4.2)\n",
+      "Collecting mdit-py-plugins (from jupytext)\n",
+      "  Downloading mdit_py_plugins-0.4.2-py3-none-any.whl.metadata (2.8 kB)\n",
       "Requirement already satisfied: nbformat in /home/ec2-user/anaconda3/envs/python3/lib/python3.10/site-packages (from jupytext) (5.10.4)\n",
       "Requirement already satisfied: packaging in /home/ec2-user/anaconda3/envs/python3/lib/python3.10/site-packages (from jupytext) (21.3)\n",
       "Requirement already satisfied: pyyaml in /home/ec2-user/anaconda3/envs/python3/lib/python3.10/site-packages (from jupytext) (6.0.2)\n",
@@ -304,7 +340,11 @@
       "Requirement already satisfied: jsonschema-specifications>=2023.03.6 in /home/ec2-user/anaconda3/envs/python3/lib/python3.10/site-packages (from jsonschema>=2.6->nbformat->jupytext) (2023.12.1)\n",
       "Requirement already satisfied: referencing>=0.28.4 in /home/ec2-user/anaconda3/envs/python3/lib/python3.10/site-packages (from jsonschema>=2.6->nbformat->jupytext) (0.35.1)\n",
       "Requirement already satisfied: rpds-py>=0.7.1 in /home/ec2-user/anaconda3/envs/python3/lib/python3.10/site-packages (from jsonschema>=2.6->nbformat->jupytext) (0.20.0)\n",
-      "Requirement already satisfied: platformdirs>=2.5 in /home/ec2-user/anaconda3/envs/python3/lib/python3.10/site-packages (from jupyter-core!=5.0.*,>=4.12->nbformat->jupytext) (4.3.6)\n"
+      "Requirement already satisfied: platformdirs>=2.5 in /home/ec2-user/anaconda3/envs/python3/lib/python3.10/site-packages (from jupyter-core!=5.0.*,>=4.12->nbformat->jupytext) (4.3.6)\n",
+      "Downloading jupytext-1.16.4-py3-none-any.whl (153 kB)\n",
+      "Downloading mdit_py_plugins-0.4.2-py3-none-any.whl (55 kB)\n",
+      "Installing collected packages: mdit-py-plugins, jupytext\n",
+      "Successfully installed jupytext-1.16.4 mdit-py-plugins-0.4.2\n"
      ]
     }
    ],
@@ -341,7 +381,7 @@
    ],
    "source": [
     "# Replace 'your_notebook.ipynb' with your actual notebook filename\n",
-    "!jupytext --to py 03_Data-storage-and-access-via-buckets.ipynb"
+    "!jupytext --to py Data-storage-and-access-via-buckets.ipynb"
    ]
   },
   {
@@ -605,9 +645,7 @@
    ],
    "source": [
     "# Push with embedded credentials from getpass (avoids interactive prompt)\n",
-    "!git push https://{username}:{token}@{github_url} main\n",
-    "\n",
-    " "
+    "!git push https://{username}:{token}@{github_url} main"
    ]
   },
   {
@@ -705,7 +743,10 @@
    "id": "29c6f294-0fb1-41f3-b9ef-797b4bf9bad4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!pwd\n",
+    "!jupyter nbconvert --to markdown Interacting-with-code-repo.ipynb\n"
+   ]
   }
  ],
  "metadata": {
