--- a/update-repo.ipynb
+++ b/update-repo.ipynb
@@ -2,9 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "id": "d864bcdd-9bdd-4eb7-ac55-09059a10c4e8",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdin",
@@ -18,9 +20,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 1602325] Updates from Jupyter notebooks\n",
-      " 2 files changed, 61 insertions(+), 81 deletions(-)\n",
-      "Already up to date.\n"
+      "[main fbe3a37] Updates from Jupyter notebooks\n",
+      " 4 files changed, 114 insertions(+), 2314 deletions(-)\n"
      ]
     },
     {
@@ -29,13 +30,14 @@
      "text": [
       "From https://github.com/UW-Madison-DataScience/test_AWS\n",
       " * branch            main       -> FETCH_HEAD\n",
-      "   c0ce483..917d040  main       -> origin/main\n"
+      "   917d040..1602325  main       -> origin/main\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Already up to date.\n",
       "Repository updated successfully.\n"
      ]
     },
@@ -44,12 +46,12 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/UW-Madison-DataScience/test_AWS.git\n",
-      "   917d040..1602325  main -> main\n"
+      "   1602325..fbe3a37  main -> main\n"
      ]
     }
    ],
    "source": [
-    "from test_AWS.scripts.AWS_helpers import update_repo\n",
+    "from scripts.AWS_helpers import update_repo\n",
     "update_repo()"
    ]
   },
@@ -86,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "a1876e11-3e1d-4fe4-a236-932542fe1775",
    "metadata": {
     "tags": []
