Updates from Jupyter notebooks

--- a/update-repo.ipynb
+++ b/update-repo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "d864bcdd-9bdd-4eb7-ac55-09059a10c4e8",
    "metadata": {
     "tags": []
@@ -12,41 +12,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "GitHub Username:  qualiaMachine\n",
-      "GitHub Personal Access Token (PAT):  ········\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[main fbe3a37] Updates from Jupyter notebooks\n",
-      " 4 files changed, 114 insertions(+), 2314 deletions(-)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "From https://github.com/UW-Madison-DataScience/test_AWS\n",
-      " * branch            main       -> FETCH_HEAD\n",
-      "   917d040..1602325  main       -> origin/main\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Already up to date.\n",
-      "Repository updated successfully.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "To https://github.com/UW-Madison-DataScience/test_AWS.git\n",
-      "   1602325..fbe3a37  main -> main\n"
+      "GitHub Username:  qualiaMachine\n"
      ]
     }
    ],
