Updates from Jupyter notebooks

--- a/update-repo.ipynb
+++ b/update-repo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "d864bcdd-9bdd-4eb7-ac55-09059a10c4e8",
    "metadata": {
     "tags": []
@@ -12,7 +12,50 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "GitHub Username:  qualiaMachine\n"
+      "GitHub Username:  qualiaMachine\n",
+      "GitHub Personal Access Token (PAT):  ········\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main dd5a155] Updates from Jupyter notebooks\n",
+      " 6 files changed, 802 insertions(+), 844 deletions(-)\n",
+      " delete mode 100644 06_Hyperparameter-tuning.ipynb\n",
+      " create mode 100644 Hyperparameter-tuning.ipynb\n",
+      " create mode 100644 scripts/__pycache__/train_nn.cpython-310.pyc\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "From https://github.com/UW-Madison-DataScience/test_AWS\n",
+      " * branch            main       -> FETCH_HEAD\n",
+      "   b2a59c3..9cacabd  main       -> origin/main\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Merge made by the 'ort' strategy.\n",
+      " .gitignore                                        |   1 +\n",
+      " scripts/__pycache__/AWS_helpers.cpython-310.pyc   | Bin 7031 -> 0 bytes\n",
+      " scripts/__pycache__/train_xgboost.cpython-310.pyc | Bin 2271 -> 0 bytes\n",
+      " 3 files changed, 1 insertion(+)\n",
+      " delete mode 100644 scripts/__pycache__/AWS_helpers.cpython-310.pyc\n",
+      " delete mode 100644 scripts/__pycache__/train_xgboost.cpython-310.pyc\n",
+      "Repository updated successfully.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/UW-Madison-DataScience/test_AWS.git\n",
+      "   9cacabd..48da25c  main -> main\n"
      ]
     }
    ],
